--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-numpy==1.26.4
+numpy==1.23.5
 torch>=1.6.0
 torchvision
-gym==0.23
+torchrl==0.5.0
+gym==0.23.1
 nes-py
-gym-super-mario-bros==7.2.3
+gym-super-mario-bros==7.4.0
 opencv-python
 matplotlib
+imageio
